--- a/style.scss
+++ b/style.scss
@@ -1,71 +1,72 @@
 div.gameboard-tile {
-    display: inline-block;
-    background-color: #000;
-    width: 50px;
-    height: 50px;
-    margin: 0px 2px;
+  display: inline-block;
+  background-color: #000;
+  width: 50px;
+  height: 50px;
+  margin: 0px 2px;
 
-    &:hover {
-        background-color: #333;
-    }
+  &:hover {
+    background-color: #333;
+  }
 
-    &:active {
-        background-color: #666;
-    }
+  &:active {
+    background-color: #666;
+  }
 }
 
 div.gameboard-tile--active {
-    background-color: #fff;
+  background-color: #fff;
 
-    &:hover {
-        background-color: #ccc;
-    }
+  &:hover {
+    background-color: #ccc;
+  }
 
-    &:active {
-        background-color: #aaa;
-    }
+  &:active {
+    background-color: #aaa;
+  }
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 #game {
-    padding: 5rem;
-    border: 1px solid #000;
+  padding: 5rem;
+  border: 1px solid #000;
 }
 
 button {
-    display: inline-block;
-    background-color: #000;
-    color: #fff;
-    border: 0;
-    padding: 1rem 2rem;
-    margin: 1rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
+  display: inline-block;
+  background-color: #000;
+  color: #fff;
+  border: 0;
+  padding: 1rem 2rem;
+  margin: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 
-    &:hover {
-        background-color: #333;
-    }
+  &:hover {
+    background-color: #333;
+  }
 
-    &:active {
-        background-color: #666;
-    }
+  &:active {
+    background-color: #666;
+  }
 }
