--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,14 @@ div.gameboard-tile {
   }
 }
 
+/** smaller game board for mobile */
+@media (max-width: 600px) {
+  div.gameboard-tile {
+    width: 25px;
+    height: 25px;
+  }
+}
+
 div.gameboard-tile--active {
   background-color: #fff;
 
@@ -46,6 +54,12 @@ main {
 #game {
   padding: 5rem;
   border: 1px solid #000;
+}
+
+@media (max-width: 600px) {
+  #game {
+    padding: 2rem;
+  }
 }
 
 button {
