--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,11 @@
-div.gameboard-tile {
+button.gameboard-tile {
   display: inline-block;
   background-color: #000;
   width: 50px;
   height: 50px;
-  margin: 0px 2px;
+  margin: 2px;
+  // remove transition
+  transition: background-color 0s ease-in-out;
 
   &:hover {
     background-color: #333;
@@ -15,13 +17,13 @@ div.gameboard-tile {
 }
 
 @media (max-width: 400px) {
-  div.gameboard-tile {
+    button.gameboard-tile {
     width: 40px;
     height: 40px;
   }
 }
 
-div.gameboard-tile--active {
+button.gameboard-tile--active {
   background-color: #fff;
 
   &:hover {
@@ -142,7 +144,7 @@ input[type="number"]::-webkit-outer-spin-button {
     font-size: 1rem;
   }
 
-  div.gameboard-tile {
+  button.gameboard-tile {
     width: 45px;
     height: 45px;
   }
