--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@ button.gameboard-tile {
   width: 50px;
   height: 50px;
   margin: 2px;
+  padding: 0;
   // remove transition
   transition: background-color 0s ease-in-out;
 
