--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,8 @@ button.gameboard-tile {
   background-color: #000;
   width: 50px;
   height: 50px;
+  border: 1px solid black;
+  border-radius: 0;
   margin: 2px;
   padding: 0;
   transition: background-color 0s ease-in-out;
@@ -26,6 +28,7 @@ button.gameboard-tile {
 
 button.gameboard-tile--active {
   background-color: #fff;
+  border: 1px solid black;
 
   &:hover {
     background-color: #ccc;
